more cmds refactor

--- a/yarn-project/cli-wallet/package.json
+++ b/yarn-project/cli-wallet/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@aztec/wallet",
+  "name": "@aztec/cli-wallet",
   "version": "0.0.0",
   "type": "module",
   "bin": "./dest/bin/index.js",
   "scripts": {
     "start": "node --no-warnings ./dest/bin",
     "start:debug": "node --inspect=0.0.0.0:9221 --no-warnings ./dest/bin",
+    "dev": "DEBUG='aztec:*' LOG_LEVEL=debug && node ./dest/bin",
     "build": "yarn clean && tsc -b",
     "build:dev": "tsc -b --watch",
     "clean": "rm -rf ./dest .tsbuildinfo",
@@ -49,6 +50,9 @@
     ]
   },
   "dependencies": {
+    "@aztec/aztec.js": "workspace:^",
+    "@aztec/circuits.js": "workspace:^",
+    "@aztec/cli": "workspace:^",
     "@aztec/foundation": "workspace:^",
     "commander": "^12.1.0",
     "source-map-support": "^0.5.21",
