feat: add attestation + proposal propogation to p2p

--- a/yarn-project/foundation/package.json
+++ b/yarn-project/foundation/package.json
@@ -42,7 +42,8 @@
     "./testing": "./dest/testing/index.js",
     "./array": "./dest/array/index.js",
     "./validation": "./dest/validation/index.js",
-    "./promise": "./dest/promise/index.js"
+    "./promise": "./dest/promise/index.js",
+    "./sequencer": "./dest/sequencer/index.js"
   },
   "scripts": {
     "build": "yarn clean && tsc -b",
