--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -7,3 +7,9 @@ scrape_configs:
   - job_name: "prometheus"
     static_configs:
       - targets: ["localhost:9090"]
+  - job_name: otel-collector
+    static_configs:
+      - targets: ["http://aztec-otel.local:8888"]
+  - job_name: aztec
+    static_configs:
+      - targets: ["http://aztec-otel.local:8889"]
