--- a/metrics/grafana/grafana.ini
+++ b/metrics/grafana/grafana.ini
@@ -46,7 +46,7 @@ http_port = 80
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-root_url = https://metrics.aztec.network/
+root_url = https://grafana.aztec.network/
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 ;serve_from_sub_path = false
