--- a/metrics/prometheus/prometheus.yml
+++ b/metrics/prometheus/prometheus.yml
@@ -9,7 +9,7 @@ scrape_configs:
       - targets: ["localhost:9090"]
   - job_name: otel-collector
     static_configs:
-      - targets: ["http://aztec-otel.local:8888"]
+      - targets: ["aztec-otel.local:8888"]
   - job_name: aztec
     static_configs:
-      - targets: ["http://aztec-otel.local:8889"]
+      - targets: ["aztec-otel.local:8889"]
