--- a/yarn-project/aztec-validator/package.json
+++ b/yarn-project/aztec-validator/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "@aztec/p2p",
-  "version": "0.0.0",
+  "name": "@aztec/aztec-validator",
+  "version": "0.1.0",
+  "main": "dest/index.js",
   "type": "module",
   "exports": "./dest/index.js",
+  "bin": "./dest/bin/index.js",
   "typedocOptions": {
     "entryPoints": [
       "./src/index.ts"
     ],
-    "name": "P2P",
+    "name": "Aztec Node",
     "tsconfig": "./tsconfig.json"
   },
   "scripts": {
+    "start": "node --no-warnings ./dest/bin",
     "build": "yarn clean && tsc -b",
     "build:dev": "tsc -b --watch",
     "clean": "rm -rf ./dest .tsbuildinfo",
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
-    "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests",
-    "start": "node ./dest",
-    "start:dev": "tsc-watch -p tsconfig.json --onSuccess 'yarn start'"
+    "test": "NODE_NO_WARNINGS=1 node --experimental-vm-modules ../node_modules/.bin/jest --passWithNoTests"
   },
   "inherits": [
     "../package.common.json"
@@ -52,51 +53,32 @@
           "summaryThreshold": 9999
         }
       ]
-    ],
-    "testTimeout": 15000
+    ]
   },
   "dependencies": {
-    "@aztec/aztec-validator": "workspace:^",
-    "@aztec/circuit-types": "workspace:^",
-    "@aztec/circuits.js": "workspace:^",
+    "@aztec/ethereum": "workspace:^",
     "@aztec/foundation": "workspace:^",
     "@aztec/kv-store": "workspace:^",
+    "@aztec/l1-artifacts": "workspace:^",
+    "@aztec/merkle-tree": "workspace:^",
+    "@aztec/p2p": "workspace:^",
+    "@aztec/protocol-contracts": "workspace:^",
+    "@aztec/prover-client": "workspace:^",
+    "@aztec/sequencer-client": "workspace:^",
+    "@aztec/simulator": "workspace:^",
     "@aztec/telemetry-client": "workspace:^",
-    "@chainsafe/discv5": "9.0.0",
-    "@chainsafe/enr": "3.0.0",
-    "@chainsafe/libp2p-gossipsub": "13.0.0",
-    "@chainsafe/libp2p-noise": "^15.0.0",
-    "@chainsafe/libp2p-yamux": "^6.0.2",
-    "@libp2p/bootstrap": "10.0.0",
-    "@libp2p/crypto": "4.0.3",
-    "@libp2p/identify": "1.0.18",
-    "@libp2p/interface": "1.3.1",
-    "@libp2p/kad-dht": "10.0.4",
-    "@libp2p/mplex": "10.0.16",
-    "@libp2p/peer-id": "4.0.7",
-    "@libp2p/peer-id-factory": "4.1.1",
-    "@libp2p/peer-store": "10.0.16",
-    "@libp2p/tcp": "9.0.24",
-    "@multiformats/multiaddr": "12.1.14",
-    "interface-datastore": "^8.2.11",
-    "interface-store": "^5.1.8",
-    "it-pipe": "^3.0.1",
-    "libp2p": "1.5.0",
-    "semver": "^7.6.0",
-    "sha3": "^2.1.4",
+    "@aztec/types": "workspace:^",
+    "@aztec/world-state": "workspace:^",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.14.6",
-    "it-drain": "^3.0.5",
-    "it-length": "^3.0.6",
+    "@types/node": "^18.7.23",
     "jest": "^29.5.0",
-    "jest-mock-extended": "^3.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
-    "uint8arrays": "^5.0.3"
+    "viem": "^2.7.15"
   },
   "files": [
     "dest",
