--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -201,6 +201,7 @@ jobs:
 
       - name: Deploy protocol contracts
         run: |
+          set -e
           docker pull aztecprotocol/aztec:${{ env.DEPLOY_TAG }}
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} deploy-protocol-contracts \
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
@@ -212,6 +213,7 @@ jobs:
 
       - name: Bootstrap devnet
         run: |
+          set -e
           docker run aztecprotocol/aztec:${{ env.DEPLOY_TAG }} bootstrap-devnet \
             --rpc-url https://api.aztec.network/${{ env.DEPLOY_TAG }}/aztec-pxe/${{ secrets.FORK_API_KEY }} \
             --l1-rpc-url https://${{ env.DEPLOY_TAG }}-mainnet-fork.aztec.network:8545/${{ secrets.FORK_API_KEY }} \
@@ -244,6 +246,7 @@ jobs:
 
       - name: Retrieve contract addresses
         run: |
+          set -e
           aws s3 cp ${{ env.CONTRACT_S3_BUCKET }}/l1_contract_addresses.json ./l1-contract_addresses.json
           aws s3 cp ${{ env.CONTRACT_S3_BUCKET }}/devnet-contracts.json ./devnet-contracts.json
 
@@ -251,7 +254,7 @@ jobs:
           echo "TF_VAR_DEV_COIN_CONTRACT_ADDRESS=$(jq -r '.devCoinL1' ./devnet-contracts.json)" >>$GITHUB_ENV
 
       - name: Deploy Faucet
-        working-directory: ./yarn-project/aztec/aztec-faucet
+        working-directory: ./yarn-project/aztec-faucet
         run: |
           terraform init -input=false -backend-config="key=${{ env.DEPLOY_TAG }}/aztec-faucet"
           terraform apply -input=false -auto-approve
