--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -78,8 +78,8 @@ jobs:
       - name: "Re-tag Aztec image"
         if: steps.check_only_workflow_changes.outputs.result == 'true'
         run: |
-          docker pull aztecprotocol/aztec
-          docker tag aztecprotocol/aztec aztecprotocol/aztec:${{ github.sha }}
+          docker pull aztecprotocol/aztec:${{ env.DEPLOY_TAG }}
+          docker tag aztecprotocol/aztec:${{ env.DEPLOY_TAG }} aztecprotocol/aztec:${{ github.sha }}
           docker push aztecprotocol/aztec:${{ github.sha }}
 
       - name: Check if mainnet fork needs deployment
