--- a/noir-projects/noir-contracts/contracts/token_with_refunds_contract/Nargo.toml
+++ b/noir-projects/noir-contracts/contracts/token_with_refunds_contract/Nargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "private_token_contract"
+name = "token_with_refunds_contract"
 authors = [""]
 compiler_version = ">=0.25.0"
 type = "contract"
