chore: Log name of current e2e test

--- a/yarn-project/end-to-end/package.json
+++ b/yarn-project/end-to-end/package.json
@@ -113,7 +113,8 @@
   "jest": {
     "slowTestThreshold": 300,
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "./shared/jest_setup.ts"
     ],
     "extensionsToTreatAsEsm": [
       ".ts"
