--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -31,6 +31,7 @@ env:
   TF_VAR_PROVING_ENABLED: false
   TF_VAR_BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
   TF_VAR_BOT_PRIVATE_KEY: ${{ secrets.BOT_PRIVATE_KEY }}
+  TF_VAR_SEQ_MAX_SECONDS_BETWEEN_BLOCKS: 1800 # 30 mins before we force-build a block
   CONTRACT_S3_BUCKET: s3://aztec-devnet-deployments
 
 jobs:
