--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -32,6 +32,9 @@ env:
   TF_VAR_BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
   TF_VAR_BOT_PRIVATE_KEY: ${{ secrets.BOT_PRIVATE_KEY }}
   TF_VAR_SEQ_MAX_SECONDS_BETWEEN_BLOCKS: 1800 # 30 mins before we force-build a block
+  TF_VAR_BOT_NO_START: false
+  TF_VAR_BOT_PRIVATE_TRANSFERS_PER_TX: 1
+  TF_VAR_BOT_PUBLIC_TRANSFERS_PER_TX: 1
   CONTRACT_S3_BUCKET: s3://aztec-devnet-deployments
 
 jobs:
