--- a/barretenberg/cpp/src/barretenberg/smt_verification/CMakeLists.txt
+++ b/barretenberg/cpp/src/barretenberg/smt_verification/CMakeLists.txt
@@ -12,7 +12,7 @@ ExternalProject_Add(
     GIT_REPOSITORY "https://github.com/cvc5/cvc5.git"
     GIT_TAG main
     BUILD_IN_SOURCE YES
-    CONFIGURE_COMMAND ${SHELL} ./configure.sh production --auto-download --cocoa --cryptominisat --kissat -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ --prefix=${CVC5_BUILD}
+    CONFIGURE_COMMAND ${SHELL} ./configure.sh production --gpl --auto-download --cocoa --cryptominisat --kissat -DCMAKE_C_COMPILER=/usr/bin/clang -DCMAKE_CXX_COMPILER=/usr/bin/clang++ --prefix=${CVC5_BUILD}
     BUILD_COMMAND make -C build
     INSTALL_COMMAND make -C build install
     UPDATE_COMMAND ""     # No update step
