feat: track txs received by node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,6 +185,7 @@ configs:
         otlp:
           protocols:
             http:
+              endpoint: 0.0.0.0:4318
 
       processors:
         batch:
