--- a/noir-projects/noir-protocol-circuits/Nargo.template.toml
+++ b/noir-projects/noir-protocol-circuits/Nargo.template.toml
@@ -33,5 +33,7 @@ members = [
     "crates/rollup-merge",
     "crates/rollup-base",
     "crates/rollup-base-simulated",
+    "crates/rollup-block-merge",
+    "crates/rollup-block-root",
     "crates/rollup-root",
 ]
