--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -36,6 +36,8 @@ env:
   TF_VAR_BOT_PRIVATE_TRANSFERS_PER_TX: 1
   TF_VAR_BOT_PUBLIC_TRANSFERS_PER_TX: 1
   TF_VAR_FAUCET_ACCOUNT_INDEX: 9
+  TF_VAR_SEQ_MIN_TX_PER_BLOCK: 2
+  TF_VAR_SEQ_MAX_TX_PER_BLOCK: 64
 
 jobs:
   setup:
