--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -31,13 +31,14 @@ env:
   TF_VAR_PROVING_ENABLED: false
   TF_VAR_BOT_API_KEY: ${{ secrets.BOT_API_KEY }}
   TF_VAR_BOT_PRIVATE_KEY: ${{ secrets.BOT_PRIVATE_KEY }}
-  TF_VAR_SEQ_MAX_SECONDS_BETWEEN_BLOCKS: 1800 # 30 mins before we force-build a block
+  TF_VAR_SEQ_MAX_SECONDS_BETWEEN_BLOCKS: 0 # disable auto block building
   TF_VAR_BOT_NO_START: true
   TF_VAR_BOT_PRIVATE_TRANSFERS_PER_TX: 1
   TF_VAR_BOT_PUBLIC_TRANSFERS_PER_TX: 1
   TF_VAR_FAUCET_ACCOUNT_INDEX: 9
   TF_VAR_SEQ_MIN_TX_PER_BLOCK: 2
   TF_VAR_SEQ_MAX_TX_PER_BLOCK: 64
+  TF_VAR_BOT_TX_INTERVAL_SECONDS: 60
 
 jobs:
   setup:
