feat: add metrics to public execution

--- a/yarn-project/txe/package.json
+++ b/yarn-project/txe/package.json
@@ -67,6 +67,7 @@
     "@aztec/kv-store": "workspace:^",
     "@aztec/pxe": "workspace:^",
     "@aztec/simulator": "workspace:^",
+    "@aztec/telemetry-client": "workspace:^",
     "@aztec/types": "workspace:^",
     "@aztec/world-state": "workspace:^"
   },
