--- a/barretenberg/cpp/CMakeLists.txt
+++ b/barretenberg/cpp/CMakeLists.txt
@@ -37,7 +37,7 @@ option(ENABLE_ASAN "Address sanitizer for debugging tricky memory corruption" OF
 option(ENABLE_HEAVY_TESTS "Enable heavy tests when collecting coverage" OFF)
 # Note: Must do 'sudo apt-get install libdw-dev' or equivalent
 option(CHECK_CIRCUIT_STACKTRACES "Enable (slow) stack traces for check circuit" OFF)
-option(TRACY_DEBUGGING "Enable low-medium overhead profiling for memory and performance with tracy" OFF)
+option(ENABLE_TRACY "Enable low-medium overhead profiling for memory and performance with tracy" OFF)
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64" OR CMAKE_SYSTEM_PROCESSOR MATCHES "arm64")
     message(STATUS "Compiling for ARM.")
@@ -53,8 +53,8 @@ if(CHECK_CIRCUIT_STACKTRACES)
     add_compile_options(-DCHECK_CIRCUIT_STACKTRACES)
 endif()
 
-if(TRACY)
-    add_compile_options(-DCHECK_CIRCUIT_STACKTRACES)
+if(ENABLE_TRACY)
+    add_compile_options(-DTRACY_ENABLE)
 endif()
 
 if(ENABLE_ASAN)
