chore: update txe tsconfig

--- a/yarn-project/txe/tsconfig.json
+++ b/yarn-project/txe/tsconfig.json
@@ -37,6 +37,9 @@
       "path": "../simulator"
     },
     {
+      "path": "../telemetry-client"
+    },
+    {
       "path": "../types"
     },
     {
