--- a/.github/workflows/devnet-deploys.yml
+++ b/.github/workflows/devnet-deploys.yml
@@ -33,9 +33,9 @@ env:
   TF_VAR_BOT_PRIVATE_KEY: ${{ secrets.BOT_PRIVATE_KEY }}
   TF_VAR_SEQ_MAX_SECONDS_BETWEEN_BLOCKS: 0 # disable auto block building
   TF_VAR_BOT_NO_START: true
-  TF_VAR_BOT_PRIVATE_TRANSFERS_PER_TX: 1
+  TF_VAR_BOT_PRIVATE_TRANSFERS_PER_TX: 0 # no private transfers
   TF_VAR_BOT_PUBLIC_TRANSFERS_PER_TX: 1
-  TF_VAR_BOT_TX_MINED_WAIT_SECONDS: 1200
+  TF_VAR_BOT_TX_MINED_WAIT_SECONDS: 0
   TF_VAR_FAUCET_ACCOUNT_INDEX: 9
   TF_VAR_SEQ_MIN_TX_PER_BLOCK: 1
   TF_VAR_SEQ_MAX_TX_PER_BLOCK: 64
